base/monitoring/flux-system/networkpolicies/prometheus-egress-flux-system.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus-egress-flux-system
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: kube-prometheus-stack-prometheus
      app.kubernetes.io/name: prometheus
  egress:
    - toEndpoints:
        - matchLabels:
            app: helm-controller
            "k8s:io.kubernetes.pod.namespace": flux-system
        - matchLabels:
            app: notification-controller
            "k8s:io.kubernetes.pod.namespace": flux-system
        - matchLabels:
            app: source-controller
            "k8s:io.kubernetes.pod.namespace": flux-system
        - matchLabels:
            app: kustomize-controller
            "k8s:io.kubernetes.pod.namespace": flux-system
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
